fixed wrap

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ section {
 .about-containers, .about-details-container {
   display: flex;
   justify-content: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .about-pic {
